fix filtering visibility, add styles for diagram

--- a/scaladoc/resources/dotty_res/styles/theme/components/pill.css
+++ b/scaladoc/resources/dotty_res/styles/theme/components/pill.css
@@ -89,11 +89,11 @@
   content: url(../../../images/thick-dark.svg);
 }
 
-.pill-container:focus ul {
+.pill-container.menu-visible ul {
   display: block;
 }
 
-.pill-container:focus .pill {
+.pill-container.menu-visible .pill {
   background-color: var(--action-primary-background-selected);
   border: 1px solid var(--action-primary-border-default);
 }
