--- a/scaladoc/resources/dotty_res/styles/theme/layout/footer.css
+++ b/scaladoc/resources/dotty_res/styles/theme/layout/footer.css
@@ -10,7 +10,7 @@
   color: var(--text-primary);
   box-sizing: border-box;
   flex-wrap: wrap;
-  z-index: 2;
+  z-index: 3;
 }
 
 #footer .left-container {
